--- a/src/catalog.html
+++ b/src/catalog.html
@@ -25,7 +25,7 @@
 	<header class="header">
 		<div class="case">
 			<div class="header__wrap row">
-				<div class="header__logo"><a href=""><img src="upload/logo.png" alt=""></a></div>
+				<div class="header__logo"><a href="index.html"><img src="upload/logo.png" alt=""></a></div>
 				<div class="header__content">
 					<div class="header__contacts b-contacts row i-mid">
 						<div class="b-contacts__time">Мы работаем ежедневно с 9:00 до 18:00</div>
@@ -40,10 +40,10 @@
 						</div>
 						<div class="nav__list">
 							<ul>
-								<li class="selected"><a href="index.html">Главная</a></li>
+								<li><a href="index.html">Главная</a></li>
 								<li><a href="about.html">О компании</a></li>
 								<li><a href="services.html">Услуги</a></li>
-								<li><a href="catalog.html">Спецтехника</a></li>
+								<li class="selected"><a href="catalog.html">Спецтехника</a></li>
 								<li><a href="contacts.html">Контакты</a></li>
 							</ul>
 						</div>
@@ -55,7 +55,7 @@
 
 
 	<main class="main">
-		<div class="page bg-gray">
+		<div class="page">
 			<div class="case">
 				<div class="page__wrap row">
 					<aside class="page__aside aside">
@@ -318,7 +318,7 @@
 					<section class="page__section section">
 						<div class="page__breadcrumbs breadcrumbs">
 							<ul>
-								<li><a href="">Главная</a></li>
+								<li><a href="index.html">Главная</a></li>
 								<li>Самосвалы</li>
 							</ul>
 						</div>
@@ -331,8 +331,8 @@
 								</ul>
 							</div>
 							<div class="products__list">
-								<div class="products__item product">
-									<a href="" class="product__img" style="background-image: url('upload/image.png');"></a>
+								<div class="products__item product product_gray">
+									<a href="product.html" class="product__img" style="background-image: url('upload/image.png');"></a>
 									<div class="product__content">
 										<div class="product__labels">
 											<ul>
@@ -340,7 +340,7 @@
 												<li><a href="">Volvo</a></li>
 											</ul>
 										</div>
-										<div class="product__name"><a href="">Экскаватор-погрузчик «JCB 3CX»</a></div>
+										<div class="product__name"><a href="product.html">Экскаватор-погрузчик «JCB 3CX»</a></div>
 										<div class="product__share">Акция</div>
 										<div class="product__data">
 											<dl>
@@ -380,8 +380,8 @@
 										</div>
 									</div>
 								</div>
-								<div class="products__item product">
-									<a href="" class="product__img" style="background-image: url('upload/image.png');"></a>
+								<div class="products__item product product_gray">
+									<a href="product.html" class="product__img" style="background-image: url('upload/image.png');"></a>
 									<div class="product__content">
 										<div class="product__labels">
 											<ul>
@@ -389,7 +389,7 @@
 												<li><a href="">Volvo</a></li>
 											</ul>
 										</div>
-										<div class="product__name"><a href="">Экскаватор-погрузчик «JCB 3CX»</a></div>
+										<div class="product__name"><a href="product.html">Экскаватор-погрузчик «JCB 3CX»</a></div>
 										<div class="product__share">Акция</div>
 										<div class="product__data">
 											<dl>
@@ -429,8 +429,8 @@
 										</div>
 									</div>
 								</div>
-								<div class="products__item product">
-									<a href="" class="product__img" style="background-image: url('upload/image.png');"></a>
+								<div class="products__item product product_gray">
+									<a href="product.html" class="product__img" style="background-image: url('upload/image.png');"></a>
 									<div class="product__content">
 										<div class="product__labels">
 											<ul>
@@ -438,7 +438,7 @@
 												<li><a href="">Volvo</a></li>
 											</ul>
 										</div>
-										<div class="product__name"><a href="">Экскаватор-погрузчик «JCB 3CX»</a></div>
+										<div class="product__name"><a href="product.html">Экскаватор-погрузчик «JCB 3CX»</a></div>
 										<div class="product__share">Акция</div>
 										<div class="product__data">
 											<dl>
@@ -504,12 +504,11 @@
 								<p>Для выполнения работ в узких забоях используют одноосный тягач с полуприцепом. Грузоподъемность техники для эксплуатации под землей - 1-5 тонн. Такие машины получают энергию от дизель-электрического, карбюраторного или электрического приводов. </p>
 							</div>
 						</div>
-
 						<div class="often">
 							<div class="often__title subtitle">Часто арендуемая техника</div>
 							<div class="often__list row between i-top">
-								<div class="often__item product product_vertical">
-									<a href="" class="product__img" style="background-image: url('upload/image.png');"></a>
+								<div class="often__item product product_vertical product_gray">
+									<a href="product.html" class="product__img" style="background-image: url('upload/image.png');"></a>
 									<div class="product__content">
 										<div class="product__labels">
 											<ul>
@@ -517,7 +516,7 @@
 												<li><a href="">Volvo</a></li>
 											</ul>
 										</div>
-										<div class="product__name"><a href="">Экскаватор-погрузчик «JCB 3CX»</a></div>
+										<div class="product__name"><a href="product.html">Экскаватор-погрузчик «JCB 3CX»</a></div>
 										<div class="product__data">
 											<dl>
 												<dt>Масса</dt>
@@ -552,8 +551,8 @@
 										</div>
 									</div>
 								</div>
-								<div class="often__item product product_vertical">
-									<a href="" class="product__img" style="background-image: url('upload/image.png');"></a>
+								<div class="often__item product product_vertical product_gray">
+									<a href="product.html" class="product__img" style="background-image: url('upload/image.png');"></a>
 									<div class="product__content">
 										<div class="product__labels">
 											<ul>
@@ -561,7 +560,7 @@
 												<li><a href="">Volvo</a></li>
 											</ul>
 										</div>
-										<div class="product__name"><a href="">Экскаватор-погрузчик «JCB 3CX»</a></div>
+										<div class="product__name"><a href="product.html">Экскаватор-погрузчик «JCB 3CX»</a></div>
 										<div class="product__data">
 											<dl>
 												<dt>Масса</dt>
@@ -596,8 +595,8 @@
 										</div>
 									</div>
 								</div>
-								<div class="often__item product product_vertical">
-									<a href="" class="product__img" style="background-image: url('upload/image.png');"></a>
+								<div class="often__item product product_vertical product_gray">
+									<a href="product.html" class="product__img" style="background-image: url('upload/image.png');"></a>
 									<div class="product__content">
 										<div class="product__labels">
 											<ul>
@@ -605,7 +604,7 @@
 												<li><a href="">Volvo</a></li>
 											</ul>
 										</div>
-										<div class="product__name"><a href="">Экскаватор-погрузчик «JCB 3CX»</a></div>
+										<div class="product__name"><a href="product.html">Экскаватор-погрузчик «JCB 3CX»</a></div>
 										<div class="product__data">
 											<dl>
 												<dt>Масса</dt>
@@ -638,178 +637,6 @@
 											</div>
 											<a data-fancybox data-src="#popup-order" href="javascript:;" class="product__btn btn btn_yellow btn_normal"><span>Заказать</span></a>
 										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="contacts">
-							<div class="contacts__wrap row">
-								<div class="contacts__data">
-									<div class="contacts__data-title page__title">Контакты</div>
-									<div class="contacts__data-text text">
-										<p>Аренда строительной и спецтехники «ТехСтрой»</p>
-										<p>г. Москва, Павелецкая набережная, д. 2, стр.4, </p>
-										<p>БЦ «Лофт Виль» офис 211.</p>
-										<p>Телефон: <a href="tel:+74951423707">+7 (495) 142-37-07</a></p>
-										<p>Моб телефон: <a href="tel:+79776365620">+7 (977) 636-56-20</a></p>
-										<p>Электронная почта: <a href="mailto:info@dcs-rent.ru">info@dcs-rent.ru</a></p>
-										<p><a href="" target="_blank">Скачать пример договора аренды спецтехники</a></p>
-									</div>
-								</div>
-								<div class="contacts__map">
-									<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-									<script>
-										ymaps.ready(function () {
-								    var myMap = new ymaps.Map('map', {
-								            center: [55.716529, 37.645860],
-								            zoom: 16,
-								            controls: []
-								        }, {
-								            searchControlProvider: 'yandex#search'
-								        }),
-
-								        MyIconContentLayout = ymaps.templateLayoutFactory.createClass(
-								            '<div style="color: #FFFFFF; font-weight: bold;">$[properties.iconContent]</div>'
-								        ),
-
-								        myPlacemark = new ymaps.Placemark(myMap.getCenter(), {}, {
-								            iconLayout: 'default#image',
-								            iconImageHref: 'upload/icons/marker.png',
-								            iconImageSize: [26, 39],
-								            iconImageOffset: [-13, -39]
-								        })
-
-
-								    myMap.geoObjects.add(myPlacemark)
-										});
-									</script>
-									<div id="map"></div>
-								</div>
-								<div class="contacts__text text">
-									<h2>Реквизиты</h2>
-									<p>ИНН 7708818082</p>
-									<p>КПП 770801001</p>
-									<p>ОГРН 1147746841087</p>
-									<p>Наименование банка: ОАО «Сбербанк России» г. Москва</p>
-									<p>к/сч №30101810400000000225</p>
-									<p>БИК 044525225</p>
-									<p>р/сч №40702810238000005298</p>
-								</div>
-							</div>
-						</div>
-						<div class="card">
-							<div class="card__wrap"></div>
-							<div class="card__advantages"></div>
-							<div class="card__tabs"></div>
-							<div class="card__often"></div>
-						</div>
-						<div class="page__title">Услуги</div>
-						<div class="page__text text">
-							<div class="services">
-								<div class="services__list row">
-									<div class="services__item">
-										<div class="services__img"><img src="upload/icons/1.png" alt=""></div>
-										<div class="services__name">Уборка и вывоз снега</div>
-									</div>
-									<div class="services__item">
-										<div class="services__img"><img src="upload/icons/2.png" alt=""></div>
-										<div class="services__name">Продажа щебня</div>
-									</div>
-									<div class="services__item">
-										<div class="services__img"><img src="upload/icons/3.png" alt=""></div>
-										<div class="services__name">Вывоз строительного мусора</div>
-									</div>
-									<div class="services__item">
-										<div class="services__img"><img src="upload/icons/4.png" alt=""></div>
-										<div class="services__name">Продажа песка</div>
-									</div>
-									<div class="services__item">
-										<div class="services__img"><img src="upload/icons/5.png" alt=""></div>
-										<div class="services__name">Перевозка спецтехники</div>
-									</div>
-									<div class="services__item">
-										<div class="services__img"><img src="upload/icons/6.png" alt=""></div>
-										<div class="services__name">Доставка сыпучих материалов</div>
-									</div>
-									<div class="services__item">
-										<div class="services__img"><img src="upload/icons/7.png" alt=""></div>
-										<div class="services__name">Разработка и рытье котлованов</div>
-									</div>
-									<div class="services__item">
-										<div class="services__img"><img src="upload/icons/8.png" alt=""></div>
-										<div class="services__name">Демонтаж зданий и сооружений</div>
-									</div>
-									<div class="services__item">
-										<div class="services__img"><img src="upload/icons/9.png" alt=""></div>
-										<div class="services__name">Вывоз грунта</div>
-									</div>
-									<div class="services__item">
-										<div class="services__img"><img src="upload/icons/10.png" alt=""></div>
-										<div class="services__name">Укладка асфальта и асфальтирование</div>
-									</div>
-								</div>
-							</div>
-
-							<!-- услуги -->
-							<p>Когда требуются услуги спецтехники по выгодным ценам, «ДЭКАР Строй» предоставит их в полном объеме. </p>
-							<p>На сайте компании можно заказать технику различного назначения:</p>
-							<ul class="ul-list ul-bold">
-								<li>автомобильную — грузовики, бензовозы, тонары и пр.;</li>
-								<li>дорожную — фрезы, грейдеры, асфальтовые катки и т.д.;</li>
-								<li>подъемную — автокраны, краны-манипуляторы;</li>
-								<li>строительную — самосвалы, экскаваторы, бульдозеры, трубоукладчики;</li>
-								<li>коммунальную — поливомоечные, снегоуборочные и другие машины.</li>
-							</ul>
-							<p>Помимо этого, мы предлагаем большой выбор мини-техники, навесного и дополнительного оборудования: <br><strong>компрессоров, гидромолотов, ямобуров и пр.</strong></p>
-							<p>Поэтому, если у вашей компании большой заказ и срочно понадобилось увеличить парк машин или нет какого-то вида техники, но необходимо выполнить узкоспециальные работы, заказывайте у нас услуги спецтехники с экипажем, на длительный срок. Обслуживание машин и их доставку на объект заказчика обеспечивает наш персонал.</p>
-							<p>Оставляйте заявку на сайте, наш специалист ответит в кратчайшие сроки.</p>
-							
-
-							<!-- about -->
-							<p>Наша компания «ДЭКАР Строй» уже не первый год оказывает услуги по:</p>
-							<ul class="ul-table">
-								<li>предоставлению спецтехники в аренду</li>
-								<li>демонтажу зданий и сооружений;</li>
-								<li>разработке и рытью котлованов</li>
-								<li>вывозу грунта</li>
-								<li>перевозке крупногабаритной спецтехники и иных видов транспорта;</li>
-								<li>перевозке топлива и др. нефтепродуктов при помощи наших бензовозов</li>
-								<li>доставке и перевозке сыпучих материалов;</li>
-							</ul>
-							<p>Компания осуществляет свою деятельность на территории г. Москвы и Московской области c 2009 года.</p>
-							<p>В настоящее время далеко не все компании, оказывающие аналогичные услуги, могут позволить себе наличие собственного парка спецтехники, однако мы не только содержим, но и постоянно обновляем наш автопарк, пополняя его новыми машинами, востребованными для осуществления строительных и иных видов работ.</p>
-							<p>За время осуществления деятельности в компании сформировался значительный парк техники, способный удовлетворить практически любые пожелания Заказчика.</p>
-							<p>Аренда строительной техники в Москве и Московской области (Климовск, Воскресенск, Можайск, Дмитров, Долгопрудный, Железнодорожный, Жуковский, Ивантеевка, Коломна, Королёв, Красногорск, Орехово-Зуево, Подольск, Пущино, Раменское, Сергиев Посад, Дубна, Серпухов, Фрязино, Черноголовка, Балашиха, Щелково, Юбилейный и др.) осуществляется на договорной основе, качественно и в установленные сроки. Мы предлагаем в аренду экскаваторы различных типов, фронтальные погрузчики, мини-погрузчики, автовышки, автокраны, самосвалы, бульдозеры, ямобуры, автобетононасосы, манипуляторы, длинномеры, поливомоечные машины, катки, низкорамные платформы, илососы, автогрейдеры и др. технику.</p>
-							<p>На протяжении многих лет наша компания работает в данном сегменте рынка услуг и зарекомендовала себя как надежный, исполнительный партнер, с которым выгодно взаимодействовать. Наша компания располагает квалифицированным рабочим персоналом, который поможет Вам правильно и эффективно эксплуатировать ту или иную технику, имеет ремонтные бригады, которые придут на помощь в случае необходимости, а также иных специалистов, необходимых для качественного предоставления услуг.</p>
-							<p>Партнерами компании являются различные строительные и производственные организации (как крупные, так и средние, малые предприятия), частные лица.</p>
-							<p>Арендовав спецтехнику в компании «ДЭКАР Строй», Вы получите в нашем лице надежного партнера, способного быстро и качественно помочь Вам в реализации Вашей задачи. Мы предоставляем услуги по аренде спецтехники.</p>
-							<p>в Москве и Московской области 7 дней в неделю. Будем рады взаимовыгодному сотрудничеству с Вами!</p>
-							<h2>Почему выбирают нас:</h2>
-							<ol class="ol-bold">
-								<li>Оперативно подбираем и подаем на объект необходимую для Вас технику;</li>
-								<li>Располагаем очень внушительным парком техники различного вида;</li>
-								<li>Имеем квалифицированных операторов и специалистов с большим опытом работы, что способствует качественному выполнению самых разных задач (накопленный опыт позволяет профессионально, спокойно и рассудительно подходить к решению задач любой сложности);</li>
-								<li>Предоставляем целый комплекс услуг в сфере строительных и иных видов работ;</li>
-								<li>Постоянным клиентам предоставляем скидки.</li>
-							</ol>
-
-							<div class="advantages">
-								<div class="advantages__list row between">
-									<div class="advantages__item">
-										<div class="advantages__icon"><img src="upload/icons/truck.png" alt=""></div>
-										<div class="advantages__title">Собственный <br>парк <br>спецтехники</div>
-									</div>
-									<div class="advantages__item">
-										<div class="advantages__icon"><img src="upload/icons/hand-share.png" alt=""></div>
-										<div class="advantages__title">Низкие <br>цены</div>
-									</div>
-									<div class="advantages__item">
-										<div class="advantages__icon"><img src="upload/icons/share.png" alt=""></div>
-										<div class="advantages__title">Бонусы и скидки <br>за долгосрочную <br>аренду</div>
-									</div>
-									<div class="advantages__item">
-										<div class="advantages__icon"><img src="upload/icons/enginer.png" alt=""></div>
-										<div class="advantages__title">Техника сдается <br>с водителями и с ГСМ</div>
 									</div>
 								</div>
 							</div>
