--- a/src/contacts.html
+++ b/src/contacts.html
@@ -327,7 +327,7 @@
 										<p>Телефон: <a href="tel:+74951423707">+7 (495) 142-37-07</a></p>
 										<p>Моб телефон: <a href="tel:+79776365620">+7 (977) 636-56-20</a></p>
 										<p>Электронная почта: <a href="mailto:info@dcs-rent.ru">info@dcs-rent.ru</a></p>
-										<p><a href="" target="_blank">Скачать пример договора аренды спецтехники</a></p>
+										<p><a href="upload/doc.pdf" target="_blank">Скачать пример договора аренды спецтехники</a></p>
 									</div>
 								</div>
 								<div class="contacts__map">
