--- a/src/product.html
+++ b/src/product.html
@@ -489,7 +489,7 @@
 							<div class="card__often often">
 								<div class="often__title subtitle">Часто арендуемая техника</div>
 								<div class="often__list row between i-top">
-									<div class="often__item product product_vertical">
+									<div class="often__item product product_vertical product_gray">
 										<a href="" class="product__img" style="background-image: url('upload/image.png');"></a>
 										<div class="product__content">
 											<div class="product__labels">
@@ -533,7 +533,7 @@
 											</div>
 										</div>
 									</div>
-									<div class="often__item product product_vertical">
+									<div class="often__item product product_vertical product_gray">
 										<a href="" class="product__img" style="background-image: url('upload/image.png');"></a>
 										<div class="product__content">
 											<div class="product__labels">
@@ -577,7 +577,7 @@
 											</div>
 										</div>
 									</div>
-									<div class="often__item product product_vertical">
+									<div class="often__item product product_vertical product_gray">
 										<a href="" class="product__img" style="background-image: url('upload/image.png');"></a>
 										<div class="product__content">
 											<div class="product__labels">
