--- a/src/index.html
+++ b/src/index.html
@@ -215,8 +215,421 @@
 				</div>
 			</div>
 		</div>
+
 		<div class="page page_main bg-gray">
 			<div class="case">
+				<div class="page__wrap row">
+					<aside class="page__aside aside">
+						<nav class="nav-block">
+							<div class="nav-block__title">Наша техника</div>
+							<div class="nav-block__list">
+								<ul>
+									<li>
+										<a href="">Автокраны</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Самосвалы</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Мини-экскаваторы</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Мини-погрузчики</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Экскаваторы-погрузчики</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Фронтальные погрузчики</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Гусеничные экскаваторы</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Колесные экскаваторы</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Башенный кран</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Манипуляторы</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Экскаваторы-планировщики</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Подъемники</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Длинномеры</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Автовышки</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Бульдозеры</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Низкорамные платформы</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Гусеничные краны</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Траншеекопатели</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Ямобуры</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Катки</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Компрессоры</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Поливомоечные машины</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Гидромолоты</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Автобетононасосы</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Автогрейдеры</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Грейферы</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Тонары</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Дорожная фреза</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Тралы</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Асфальтоукладчики</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="">Трубоукладчики</a>
+										<ul>
+											<li><a href="">Пункт меню 1</a></li>
+											<li><a href="">Пункт меню 2</a></li>
+											<li><a href="">Пункт меню 3</a></li>
+										</ul>
+									</li>
+								</ul>
+							</div>
+						</nav>
+					</aside>
+					<section class="page__section section">
+						<div class="products">
+							<div class="products__list">
+								<div class="products__item product">
+									<a href="product.html" class="product__img" style="background-image: url('upload/image.png');"></a>
+									<div class="product__content">
+										<div class="product__labels">
+											<ul>
+												<li class="selected"><a href="">Самосвал</a></li>
+												<li><a href="">Volvo</a></li>
+											</ul>
+										</div>
+										<div class="product__name"><a href="product.html">Экскаватор-погрузчик «JCB 3CX»</a></div>
+										<div class="product__share">Акция</div>
+										<div class="product__data">
+											<dl>
+												<dt>Масса</dt>
+												<dd>22 550 кг</dd>
+											</dl>
+											<dl>
+												<dt>Мощность двигателя</dt>
+												<dd>172 л.с.</dd>
+											</dl>
+											<dl>
+												<dt>Емкость ковша</dt>
+												<dd>1.2 м3</dd>
+											</dl>
+											<dl>
+												<dt>Максимальная глубина копания</dt>
+												<dd>6.6 м</dd>
+											</dl>
+										</div>
+										<div class="product__buy row">
+											<div class="product__prices row">
+												<div class="product__price price">
+													<div class="price__old">13 500</div>
+													<div class="price__current">
+														<div class="price__current-count">12 000</div>
+														<div class="price__current-text">рублей  / смена</div>
+													</div>
+												</div>
+												<div class="product__price price">
+													<div class="price__current">
+														<div class="price__current-count">1 500</div>
+														<div class="price__current-text">рублей  / час</div>
+													</div>
+												</div>
+											</div>
+											<a data-fancybox data-src="#popup-order" href="javascript:;" class="product__btn btn btn_yellow btn_normal"><span>Заказать</span></a>
+										</div>
+									</div>
+								</div>
+								<div class="products__item product">
+									<a href="product.html" class="product__img" style="background-image: url('upload/image.png');"></a>
+									<div class="product__content">
+										<div class="product__labels">
+											<ul>
+												<li class="selected"><a href="">Самосвал</a></li>
+												<li><a href="">Volvo</a></li>
+											</ul>
+										</div>
+										<div class="product__name"><a href="product.html">Экскаватор-погрузчик «JCB 3CX»</a></div>
+										<div class="product__share">Акция</div>
+										<div class="product__data">
+											<dl>
+												<dt>Масса</dt>
+												<dd>22 550 кг</dd>
+											</dl>
+											<dl>
+												<dt>Мощность двигателя</dt>
+												<dd>172 л.с.</dd>
+											</dl>
+											<dl>
+												<dt>Емкость ковша</dt>
+												<dd>1.2 м3</dd>
+											</dl>
+											<dl>
+												<dt>Максимальная глубина копания</dt>
+												<dd>6.6 м</dd>
+											</dl>
+										</div>
+										<div class="product__buy row">
+											<div class="product__prices row">
+												<div class="product__price price">
+													<div class="price__old">13 500</div>
+													<div class="price__current">
+														<div class="price__current-count">12 000</div>
+														<div class="price__current-text">рублей  / смена</div>
+													</div>
+												</div>
+												<div class="product__price price">
+													<div class="price__current">
+														<div class="price__current-count">1 500</div>
+														<div class="price__current-text">рублей  / час</div>
+													</div>
+												</div>
+											</div>
+											<a data-fancybox data-src="#popup-order" href="javascript:;" class="product__btn btn btn_yellow btn_normal"><span>Заказать</span></a>
+										</div>
+									</div>
+								</div>
+								<div class="products__item product">
+									<a href="product.html" class="product__img" style="background-image: url('upload/image.png');"></a>
+									<div class="product__content">
+										<div class="product__labels">
+											<ul>
+												<li class="selected"><a href="">Самосвал</a></li>
+												<li><a href="">Volvo</a></li>
+											</ul>
+										</div>
+										<div class="product__name"><a href="product.html">Экскаватор-погрузчик «JCB 3CX»</a></div>
+										<div class="product__share">Акция</div>
+										<div class="product__data">
+											<dl>
+												<dt>Масса</dt>
+												<dd>22 550 кг</dd>
+											</dl>
+											<dl>
+												<dt>Мощность двигателя</dt>
+												<dd>172 л.с.</dd>
+											</dl>
+											<dl>
+												<dt>Емкость ковша</dt>
+												<dd>1.2 м3</dd>
+											</dl>
+											<dl>
+												<dt>Максимальная глубина копания</dt>
+												<dd>6.6 м</dd>
+											</dl>
+										</div>
+										<div class="product__buy row">
+											<div class="product__prices row">
+												<div class="product__price price">
+													<div class="price__old">13 500</div>
+													<div class="price__current">
+														<div class="price__current-count">12 000</div>
+														<div class="price__current-text">рублей  / смена</div>
+													</div>
+												</div>
+												<div class="product__price price">
+													<div class="price__current">
+														<div class="price__current-count">1 500</div>
+														<div class="price__current-text">рублей  / час</div>
+													</div>
+												</div>
+											</div>
+											<a data-fancybox data-src="#popup-order" href="javascript:;" class="product__btn btn btn_yellow btn_normal"><span>Заказать</span></a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</section>
+				</div>
 				<div class="about">
 					<div class="about__title page__title">Аренда спецтехники по самым выгодным ценам</div>
 					<div class="about__wrap row i-mid">
