nav-block fix && products-item

--- a/src/product.html
+++ b/src/product.html
@@ -444,45 +444,11 @@
 										<p>Самосвал КамАЗ 55111 арендуется для перевозки сыпучих грунтов, вывоза мусора и вывоза снега. Эту автомашину удобно использовать как в городских, так и в сельских условиях, благодаря высокой маневренности. Габариты автомобиля (длина, ширина, высота) позволяют ему без труда перемещаться по городской местности, минуя мосты, тоннели и прочие ограниченные по площади места. Грузоподъемность данного самосвала составляет 13 тонн, а выгрузка осуществляется через задний борт.</p>
 									</div>
 									<div class="tabs__item text" id="card-item-2">
-										<h3>Технические характеристики</h3>
-										<div class="dl">
-											<dl>
-												<dt><span>Скорость Первая/Вторая (опция)</span></dt>
-												<dd>5,2 км/ч</dd>
-											</dl>
-											<dl>
-												<dt><span>Мощность двигателя</span></dt>
-												<dd>98 л/с</dd>
-											</dl>
-											<dl>
-												<dt><span>Длина с ковшом</span></dt>
-												<dd>7630 мм</dd>
-											</dl>
-											<dl>
-												<dt><span>Ширина с ковшом</span></dt>
-												<dd>2590 мм</dd>
-											</dl>
-											<dl>
-												<dt><span>Высота</span></dt>
-												<dd>2695 мм</dd>
-											</dl>
-											<dl>
-												<dt><span>Скорость поворотан</span></dt>
-												<dd>12,8 об/мин</dd>
-											</dl>
-											<dl>
-												<dt><span>Радиус поворота платформы</span></dt>
-												<dd>2 м</dd>
-											</dl>
-											<dl>
-												<dt><span>Двигатель</span></dt>
-												<dd>Isuzu</dd>
-											</dl>
-										</div>
-										<h3>Преимущества</h3>
-										<p>Главной особенностью этой модели самосвала является наличие обогревательной системы для кузова, которая упрощает выгрузку материалов при низкой температуре, не позволяя грузу примерзнуть к поддону. Управление оборудованием самосвала полностью электропневматическое. Кабина обеспечена системами теплоизоляции и изоляции от проникновения шумов. Специальная конструкция кузова накрывает кабину, защищая ее от попадания посторонних предметов.</p>
-										<h3>Характеристики</h3>
-										<p>Самосвал КамАЗ 55111 арендуется для перевозки сыпучих грунтов, вывоза мусора и вывоза снега. Эту автомашину удобно использовать как в городских, так и в сельских условиях, благодаря высокой маневренности. Габариты автомобиля (длина, ширина, высота) позволяют ему без труда перемещаться по городской местности, минуя мосты, тоннели и прочие ограниченные по площади места. Грузоподъемность данного самосвала составляет 13 тонн, а выгрузка осуществляется через задний борт.</p>
+										<h3>Как заказать</h3>
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, odit.</p>
+										<h3>Lorem ipsum dolor sit amet.</h3>
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores maiores velit optio excepturi necessitatibus vel. Aspernatur eum sed ut temporibus pariatur labore voluptatibus ducimus, provident laborum vero quas quidem, et rerum, consequatur eos quasi blanditiis debitis dolore aut asperiores deleniti accusamus expedita esse distinctio vitae. Delectus id molestiae voluptas temporibus amet, aliquam natus repudiandae, architecto laudantium provident nulla, quasi illo debitis. Minima, eligendi atque, deserunt tempore eaque doloribus ratione odit natus provident numquam culpa eius obcaecati, molestias inventore dolore rerum. Rem laudantium repellendus voluptas a quaerat ipsa ipsam expedita dolores nesciunt. Ullam aliquam quae veritatis dolores sunt odit, sapiente velit nulla. Nostrum eius beatae quia! Iusto quas natus unde. Id qui, beatae optio excepturi eos nisi voluptatum veniam vitae quasi!</p>
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores maiores velit optio excepturi necessitatibus vel. Aspernatur eum sed ut temporibus pariatur labore voluptatibus ducimus, provident laborum vero quas quidem, et rerum, consequatur eos quasi blanditiis debitis dolore aut asperiores deleniti accusamus expedita esse distinctio vitae. Delectus id molestiae voluptas temporibus amet, aliquam natus repudiandae, architecto laudantium provident nulla, quasi illo debitis. Minima, eligendi atque, deserunt tempore eaque doloribus ratione odit natus provident numquam culpa eius obcaecati, molestias inventore dolore rerum. Rem laudantium repellendus voluptas a quaerat ipsa ipsam expedita dolores nesciunt. Ullam aliquam quae veritatis dolores sunt odit, sapiente velit nulla. Nostrum eius beatae quia! Iusto quas natus unde. Id qui, beatae optio excepturi eos nisi voluptatum veniam vitae quasi!</p>
 									</div>
 								</div>
 							</div>
